Added TODO list

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 Just a repo to store encoded videos for use on Discord
+
+# TODO
+- [ ] Find out max bitrate option in VP9
+- [ ] Learn audio compresssion/bitrates/file sizes
